src/components/AddTransactionForm/AddTransactionForm.module.css
.TransactionForm {
  padding: 28px 20px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
  color: #FBFBFB;
  /* box-sizing: border-box; */
}

.FormRow {
  width: 100%;
  display: flex;
  /* flex-wrap: wrap; */
  row-gap: 40px;
  column-gap: 20px;
  justify-content: center;
  align-items: center;
}

.FormRow .FormTitle {
  /* width: 100%; */
  font-weight: 400;
  font-size: 24px;
  line-height: 100%;
  letter-spacing: 0%;
  text-align: center;
}

.FormRow .switchLabel {
  font-weight: 600;
  font-size: 16px;
  line-height: 100%;
  letter-spacing: 0%;
}

.FormRow .switchLabel.incomeLabel {
  color: #FFB627;
  font-weight: 800;
}

.FormRow .switchLabel.expenseLabel {
  color: #FF868D;
  font-weight: 800;
}

.FormRow .switchBox {
  display: flex;
  align-items: center;
  background-color: white;
  width: 80px;
  height: 40px;
  border-radius: 30px;
  position: relative;
}

.FormRow .switchBox .switchIcon {
  position: absolute;
  width: 44px;
  height: 44px;
  color: white;
  border-radius: 50%;
  opacity: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.FormRow .switchBox .switchIcon:hover {
  opacity: 1;
  cursor: pointer
}

.FormRow .switchBox .switchIcon.incomeSwitch {
  top: -1px;
  left: -10px;
  background: #FFB627;
  box-shadow: 0px 6px 15px 0px #FFC72780;
}

.FormRow .switchBox .switchIcon.expenseSwitch {
  top: -1;
  right: -10px;
  background: #FF868D;
  box-shadow: 0px 6px 15px 0px #FF868D80;
}

.FormRow .FormInput {
  width: 100%;
  background: transparent;
  border: none;
  border-bottom: 1px solid #FBFBFB;
  padding: 8px 20px;
  color: #FFFFFF66;
  font-weight: 600;
  font-size: 18px;
  line-height: 100%;
  letter-spacing: 0%;
}

.FormRow p {
  text-align: left;
}

.FormRow .FormInput.selectInput option {
  color: #FFFFFF;
  background: linear-gradient(rgba(83, 61, 186, 0.7) 0%, rgba(80, 48, 154, 0.7) 43.14%, rgba(106, 70, 165, 0.525) 73.27%, rgba(133, 93, 175, 0.133) 120.03%);

}



.FormRow .FormInput.selectInput>option:hover {
  background-color: #FBFBFB;
  color: #4D3594;
}

.FormRow .FormButton {
  width: 100%;
  padding: 12px 120px;
  border-radius: 20px;
  border: none;
  font-weight: 400;
  background-color: #FBFBFB;
  font-size: 18px;
  line-height: 100%;
  letter-spacing: 3px;
  text-align: center;
  text-transform: uppercase;
  box-shadow: 1px 9px 15px 0px #00000033;
  cursor: pointer;
}

.FormRow .FormButton.submitButton {
  color: white;
  background: linear-gradient(96.76deg, #FFC727 -16.42%, #9E40BA 97.04%, #7000FF 150.71%);
}

@media (min-width: 768px) {
  .FormRow .FormButton {
    width: 75%;
    padding: 13px 68px;
  }

  .FormRow .switchLabel {
    text-transform: capitalize;
  }

  .FormRow .switchLabel.incomeLabel {
    color: #FFB627;
  }
}

